--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -83,7 +83,7 @@
             android:exported="true" />
 
         <service
-            android:name=".CarnotificationListener"
+            android:name=".CarNotificationListener"
             android:exported="false"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
