--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -22,28 +22,28 @@
 
         <activity android:name=".OBD2AA" />
 
-        <activity android:name=".TPMS" />
+        <activity android:name=".ui.activity.TPMSActivity" />
 
         <activity
-            android:name=".AppPreferences"
+            android:name=".preference.AppPreferences"
             android:label="@string/pref_title" />
 
         <activity
-            android:name=".AppCameraSettings"
+            android:name=".preference.AppCameraSettings"
             android:label="@string/Speed_camera_settings" />
 
         <activity
-            android:name=".TpmsSettings"
+            android:name=".preference.TpmsSettings"
             android:label="@string/tpms_set_tit" />
 
         <activity
-            android:name=".PreviewActivity"
+            android:name=".ui.activity.PreviewActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="Preview"
             android:screenOrientation="landscape" />
 
         <activity
-            android:name=".AppSettings"
+            android:name=".preference.AppSettings"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -57,7 +57,7 @@
             android:resource="@xml/automotive_app_desc" />
 
         <service
-            android:name=".MyOdbService"
+            android:name=".service.MyOdbService"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -69,7 +69,7 @@
         </service>
 
         <service
-            android:name=".MyTpmsService"
+            android:name=".service.MyTpmsService"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -79,11 +79,11 @@
         </service>
 
         <service
-            android:name=".OBD2_Background"
+            android:name=".service.OBD2Service"
             android:exported="true" />
 
         <service
-            android:name=".CarNotificationListener"
+            android:name=".auto.CarNotificationListener"
             android:exported="false"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
@@ -92,7 +92,7 @@
         </service>
 
         <receiver
-            android:name=".CarModeReceiver"
+            android:name=".auto.CarModeReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -104,7 +104,7 @@
         </receiver>
 
         <provider
-            android:name=".GenericFileProvider"
+            android:name=".provider.GenericFileProvider"
             android:authorities="${applicationId}.uk.co.boconi.emil.obd2aa.provider"
             android:exported="false"
             android:grantUriPermissions="true">
