--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -29,11 +29,11 @@
             android:label="@string/pref_title" />
 
         <activity
-            android:name=".preference.AppCameraSettings"
+            android:name=".preference.CameraPreferences"
             android:label="@string/Speed_camera_settings" />
 
         <activity
-            android:name=".preference.TpmsSettings"
+            android:name=".preference.TPMSPreferences"
             android:label="@string/tpms_set_tit" />
 
         <activity
@@ -57,7 +57,7 @@
             android:resource="@xml/automotive_app_desc" />
 
         <service
-            android:name=".service.MyOdbService"
+            android:name=".service.OBD2Service"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -69,7 +69,7 @@
         </service>
 
         <service
-            android:name=".service.MyTpmsService"
+            android:name=".service.TPMSService"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -79,7 +79,7 @@
         </service>
 
         <service
-            android:name=".service.OBD2Service"
+            android:name=".service.AppService"
             android:exported="true" />
 
         <service
