--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -2,16 +2,16 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "27.0.2"
+    buildToolsVersion '28.0.3'
+
     defaultConfig {
-        applicationId "uk.co.boconi.emil.obd2aa"
+        applicationId 'uk.co.boconi.emil.obd2aa'
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 35
-        versionName "2.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        versionName '2.0'
     }
+
     lintOptions {
         disable 'MissingTranslation'
     }
@@ -25,14 +25,17 @@ android {
 }
 
 dependencies {
+    compile files('src/main/lib/clean.jar')
+
     compile 'com.android.support:support-v4:25.4.0'
     compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.1.3'
+
     compile 'com.google.android.gms:play-services-location:11.0.4'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.github.angads25:filepicker:1.1.1'
-    compile 'com.google.maps.android:android-maps-utils:0.5+'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.maps.android:android-maps-utils:0.5+'
+
+    compile 'com.google.code.gson:gson:2.8.5'
+    compile 'com.github.angads25:filepicker:1.1.1'
     compile 'me.priyesh:chroma:1.0.2'
-    compile files('src/main/lib/clean.jar')
 }
