--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -25,17 +25,17 @@ android {
 }
 
 dependencies {
-    compile files('src/main/lib/clean.jar')
+    implementation files('src/main/lib/clean.jar')
 
-    compile 'com.android.support:support-v4:28.0.0'
-    compile 'com.android.support:appcompat-v7:28.0.0'
-    compile 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    compile 'com.google.android.gms:play-services-location:11.0.4'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
-    compile 'com.google.maps.android:android-maps-utils:0.5+'
+    implementation 'com.google.android.gms:play-services-location:11.0.4'
+    implementation 'com.google.android.gms:play-services-maps:11.0.4'
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
 
-    compile 'com.google.code.gson:gson:2.8.5'
-    compile 'com.github.angads25:filepicker:1.1.1'
-    compile 'me.priyesh:chroma:1.0.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.angads25:filepicker:1.1.1'
+    implementation 'me.priyesh:chroma:1.0.2'
 }
