restore torque service feedback

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:screenOrientation="landscape" />
 
         <activity
-            android:name=".preference.AppSettings"
+            android:name=".ui.activity.AppSettings"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
